feat: Criação da seção de investimento

--- a/BankSystem.API/BankSystem.API.csproj
+++ b/BankSystem.API/BankSystem.API.csproj
@@ -19,6 +19,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\BankSystem.Application\BankSystem.Application.csproj" />
+    <ProjectReference Include="..\BankSystem.Domain\BankSystem.Domain.csproj" />
     <ProjectReference Include="..\BankSystem.Infraestructure\BankSystem.Infraestructure.csproj" />
   </ItemGroup>
 
